--- a/tp3/pom.xml
+++ b/tp3/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>iut.gon</groupId>
-    <artifactId>test</artifactId>
+    <artifactId>tp3</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -41,7 +41,7 @@
                         <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>iut.gon.test.App</mainClass>
+                            <mainClass>iut.gon.tp3.App</mainClass>
                         </configuration>
                     </execution>
                 </executions>
